--- a/zora-I.html
+++ b/zora-I.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="bootstrap.min.css"/>
 <link rel="stylesheet" href="zora.css" />
 <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
@@ -163,6 +163,6 @@
     </div>
   </footer>
   <script src="jquery-3.1.1.js"></script> 
-<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="bootstrap.min.js"></script>
 </body>
 </html>
